--- a/application/public/index.html
+++ b/application/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+      </style>
+    <title>Random Color Palette Generator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
